Browser testing showed some issues espcially on mobile browsers, this should help a ton.
Former-commit-id: 70041157f57956fbc4925cd7234a6fe0fe45d34a

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,10 +82,6 @@ button {
 	border: 2px solid red;
 }
 
-.btn.active, .btn:active {
-    background-color: #FFFFFFS;
-}
-
 .slider_text_input {
 	width: 30px;
 	height: 25px;
